Anonymous | Login | 2021-01-19 02:50 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024890 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2014-05-01 03:51 | 2016-04-20 15:51 | ||||
Reporter | shoogen | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux 64-bit | OS | Debian | OS Version | 7.4 | ||||
Product Version | |||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0024890: Result of uniform scaling is invalid | ||||||||
Description | I'm trying to reproduce a problem of a more complicated part. | ||||||||
Steps To Reproduce | # f0 is attached shape restore f0 nurbsconvert result f0 checkshape result # result must be valid | ||||||||
Tags | nurbsconvert | ||||||||
Test case number | bugs modalg_6 bug24890 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|
(0029171) shoogen (reporter) 2014-05-01 03:53 edited on: 2014-05-01 13:26 |
version used b8d1c74226aed24db9b3ee663ad506458ac878f1 original part that showed the problem http://forum.freecadweb.org/viewtopic.php?f=3&t=6472&p=52212#p52212 [^] The cut of two cylinders returns a valid shape. non-uniform Scaling breaks the shape The title of this ticket is wrong. by using "deform" we actually trigger a non-uniform scaling |
(0037977) shoogen (reporter) 2015-03-01 12:15 |
a user reported a further example:pload MODELING pcylinder ext 16.2 81.8 360 pcylinder int 14.2 81.8 360 pcylinder hole 3 48.6 360 trotate hole 0 0 0 1 0 0 90 ttranslate hole 0 0 5 bcut ext_m_hole ext hole bfuse ext_p_hole ext hole bcut rminus ext_m_hole int bcut rplus ext_p_hole int #checkshape rminus #checkshape rplus deform dminus rminus 1 1 1 deform dplus rplus 1 1 1 #checkshape dminus #checkshape dplus |
(0047748) git (administrator) 2015-11-03 12:18 |
Branch CR24890 has been created by ifv. SHA-1: 46ab7a475fc0cd983208df731b1a9343abdd708c Detailed log of new commits: Author: ifv Date: Thu Oct 29 15:39:20 2015 +0300 0024890: Result of uniform scaling is invalid |
(0047749) ifv (developer) 2015-11-03 12:23 |
Branch CR24890 is redy for review. Problem with sameparameter is solved similary to 0026426, so method for evaluation tolerance is moved to BRepTools.cxx. Draft_Modification.cxx is changed to remove old static function for evaluation of tolerance |
(0047772) msv (developer) 2015-11-03 17:57 |
Reviewed. |
(0047801) apv (tester) 2015-11-05 12:06 |
Dear BugMaster, Branch CR24890 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 46ab7a475fc0cd983208df731b1a9343abdd708c Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 146 (146 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR24890-master-products-64/Debian70-64/summary.html [^] http://occt-tests/CR24890-master-products-64/Windows-64-VC10/summary.html [^] sat read C7 sat read_parallel_1 C7 Testing on Linux: Total MEMORY difference: 91961741 / 92185961 [-0.24%] Total CPU difference: 19477.500000000015 / 19419.1999999997 [+0.30%] Testing on Windows: Total MEMORY difference: 58031091 / 58033888 [-0.00%] Total CPU difference: 18157.06559069889 / 18265.657886798937 [-0.59%] |
(0047802) apv (tester) 2015-11-05 12:07 |
Dear ifv, Branch CR24890 has been rejected due to: - regressions/differences/improvements |
(0048003) git (administrator) 2015-11-10 15:05 |
Branch CR24890 has been updated forcibly by ifv. SHA-1: ced5fbbfd469ae769ac5ce68a1437900f9dc8978 |
(0048004) ifv (developer) 2015-11-10 15:09 |
Branch CR24890 is updated to fix regressions |
(0048005) ifv (developer) 2015-11-10 15:10 |
Branch CR24890 is updated to fix regressions |
(0048054) apv (tester) 2015-11-11 13:24 |
Dear BugMaster, Branch CR24890 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: ced5fbbfd469ae769ac5ce68a1437900f9dc8978 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 146 (146 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR24890-master-occt-64/Debian70-64/summary.html [^] http://occt-tests/CR24890-master-occt-64/Windows-64-VC10/summary.html [^] bugs modalg_2 bug433_1 draft angle F1, F4, F5, F7, G1 (Linux only), G3, G6, I8, J2, J3, K1 Testing on Linux: Total MEMORY difference: 92079768 / 92253280 [-0.19%] Total CPU difference: 19778.499999999804 / 19652.979999999847 [+0.64%] Testing on Windows: Total MEMORY difference: 58131172 / 58140472 [-0.02%] Total CPU difference: 18546.00728389878 / 18415.10684479887 [+0.71%] |
(0048055) apv (tester) 2015-11-11 13:25 |
Dear ifv, Branch CR24890 has been rejected due to: - regressions/differences/improvements |
(0048090) git (administrator) 2015-11-12 11:25 |
Branch CR24890 has been updated forcibly by ifv. SHA-1: 4c0325e28f4f6f0d165c63cddcd7d360755c8224 |
(0048091) ifv (developer) 2015-11-12 11:27 |
Branch CR24890 is updated to fix regressions |
(0048113) git (administrator) 2015-11-12 16:02 |
Branch CR24890 has been updated forcibly by mkv. SHA-1: eaacc3bb6133bc822eab21e8a1d7387ba88e02c9 |
(0048174) mkv (tester) 2015-11-13 17:26 |
Dear BugMaster, Branch CR24890 was rebased on branch IR-2015-11-12 of occt git-repository. SHA-1: eaacc3bb6133bc822eab21e8a1d7387ba88e02c9 |
(0048175) mkv (tester) 2015-11-13 17:26 |
Dear BugMaster, Branch CR24890 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: eaacc3bb6133bc822eab21e8a1d7387ba88e02c9 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 129 (129 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR24890-master-occt-64/Debian70-64/bugs/modalg_6/bug24890.html [^] http://occt-tests/CR24890-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug24890.html [^] bugs modalg_6 bug24890: OK Testing on Linux: occt component : Total MEMORY difference: 93032214 / 92879979 [+0.16%] Total CPU difference: 19669.429999999764 / 19535.059999999845 [+0.69%] products component : Total MEMORY difference: 26321109 / 26282092 [+0.15%] Total CPU difference: 7519.670000000001 / 7505.250000000005 [+0.19%] Testing on Windows: occt component : Total MEMORY difference: 58447070 / 58096109 [+0.60%] Total CPU difference: 18452.125882098677 / 18232.367273398875 [+1.21%] products component : Total MEMORY difference: 17223553 / 17130479 [+0.54%] Total CPU difference: 5675.487981099978 / 5724.347494299965 [-0.85%] There are no differences in images found by testdiff. |
(0048176) git (administrator) 2015-11-13 17:27 |
Branch CR24890 has been updated by mkv. SHA-1: edbb98965f2ed93a33b5306de5505ec8efba6bc8 Detailed log of new commits: Author: mkv Date: Fri Nov 13 17:07:30 2015 +0300 Test case for issue CR24890 |
(0048177) mkv (tester) 2015-11-13 17:27 |
Dear BugMaster, Branch CR24890 is TESTED. |
(0053118) git (administrator) 2016-04-17 14:19 |
Branch CR24890 has been deleted by kgv. SHA-1: edbb98965f2ed93a33b5306de5505ec8efba6bc8 |
![]() |
|||
occt: master 2651bfde
Timestamp: 2015-10-29 12:39:20 Author: ifv Committer: bugmaster [ Details ] [ Diff ] |
0024890: Result of uniform scaling is invalid Test case for issue CR24890 |
||
mod - src/BRepBuilderAPI/BRepBuilderAPI_NurbsConvert.cxx | [ Diff ] [ File ] | ||
mod - src/BRepBuilderAPI/BRepBuilderAPI_NurbsConvert.hxx | [ Diff ] [ File ] | ||
mod - src/BRepOffsetAPI/BRepOffsetAPI_DraftAngle.cxx | [ Diff ] [ File ] | ||
mod - src/BRepOffsetAPI/BRepOffsetAPI_DraftAngle.hxx | [ Diff ] [ File ] | ||
mod - src/BRepTools/BRepTools.cxx | [ Diff ] [ File ] | ||
mod - src/BRepTools/BRepTools.hxx | [ Diff ] [ File ] | ||
mod - src/BRepTools/BRepTools_NurbsConvertModification.cxx | [ Diff ] [ File ] | ||
mod - src/BRepTools/BRepTools_NurbsConvertModification.hxx | [ Diff ] [ File ] | ||
mod - src/Draft/Draft_Modification.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_6/bug24890 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-05-01 03:51 | shoogen | New Issue | |
2014-05-01 03:51 | shoogen | Assigned To | => ifv |
2014-05-01 03:53 | shoogen | Note Added: 0029171 | |
2014-05-01 12:44 | shoogen | Note Edited: 0029171 | View Revisions |
2014-05-01 13:04 | shoogen | File Added: ose1-deformed.draw | |
2014-05-01 13:04 | shoogen | Note Added: 0029172 | |
2014-05-01 13:24 | shoogen | Note Deleted: 0029172 | |
2014-05-01 13:26 | shoogen | Note Edited: 0029171 | View Revisions |
2014-09-12 14:23 | abv | Target Version | => 7.1.0 |
2015-03-01 12:15 | shoogen | Note Added: 0037977 | |
2015-04-14 20:05 | shoogen | Tag Attached: nurbsconvert | |
2015-11-03 12:18 | git | Note Added: 0047748 | |
2015-11-03 12:23 | ifv | Note Added: 0047749 | |
2015-11-03 12:23 | ifv | Assigned To | ifv => msv |
2015-11-03 12:23 | ifv | Status | new => resolved |
2015-11-03 17:57 | msv | Note Added: 0047772 | |
2015-11-03 17:57 | msv | Assigned To | msv => bugmaster |
2015-11-03 17:57 | msv | Status | resolved => reviewed |
2015-11-03 18:02 | apv | Assigned To | bugmaster => apv |
2015-11-05 12:06 | apv | Note Added: 0047801 | |
2015-11-05 12:06 | apv | Assigned To | apv => ifv |
2015-11-05 12:06 | apv | Status | reviewed => assigned |
2015-11-05 12:07 | apv | Note Added: 0047802 | |
2015-11-10 15:05 | git | Note Added: 0048003 | |
2015-11-10 15:09 | ifv | Note Added: 0048004 | |
2015-11-10 15:09 | ifv | Assigned To | ifv => msv |
2015-11-10 15:09 | ifv | Status | assigned => resolved |
2015-11-10 15:10 | ifv | Note Added: 0048005 | |
2015-11-10 15:10 | ifv | Assigned To | msv => bugmaster |
2015-11-10 15:10 | ifv | Status | resolved => reviewed |
2015-11-10 15:45 | apv | Assigned To | bugmaster => apv |
2015-11-11 13:24 | apv | Note Added: 0048054 | |
2015-11-11 13:24 | apv | Assigned To | apv => ifv |
2015-11-11 13:24 | apv | Status | reviewed => assigned |
2015-11-11 13:25 | apv | Note Added: 0048055 | |
2015-11-12 11:25 | git | Note Added: 0048090 | |
2015-11-12 11:26 | ifv | Status | assigned => resolved |
2015-11-12 11:27 | ifv | Note Added: 0048091 | |
2015-11-12 11:27 | ifv | Assigned To | ifv => bugmaster |
2015-11-12 11:27 | ifv | Status | resolved => reviewed |
2015-11-12 13:11 | mkv | Assigned To | bugmaster => mkv |
2015-11-12 16:02 | git | Note Added: 0048113 | |
2015-11-13 13:17 | ifv | File Added: f0 | |
2015-11-13 13:22 | ifv | Steps to Reproduce Updated | View Revisions |
2015-11-13 17:26 | mkv | Note Added: 0048174 | |
2015-11-13 17:26 | mkv | Note Added: 0048175 | |
2015-11-13 17:27 | git | Note Added: 0048176 | |
2015-11-13 17:27 | mkv | Note Added: 0048177 | |
2015-11-13 17:27 | mkv | Assigned To | mkv => bugmaster |
2015-11-13 17:27 | mkv | Status | reviewed => tested |
2015-11-13 17:28 | mkv | Test case number | => bugs modalg_6 bug24890 |
2015-11-20 12:07 | bugmaster | Changeset attached | => occt master 2651bfde |
2015-11-20 12:07 | bugmaster | Status | tested => verified |
2015-11-20 12:07 | bugmaster | Resolution | open => fixed |
2015-12-07 16:16 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2016-04-17 14:19 | git | Note Added: 0053118 | |
2016-04-20 15:42 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:51 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |