0024890: Result of uniform scaling is invalid

Test case for issue CR24890