src/BRepBuilderAPI/BRepBuilderAPI_NurbsConvert.hxx
@@ -23,6 +23,9 @@
 
 #include <BRepBuilderAPI_ModifyShape.hxx>
 #include <Standard_Boolean.hxx>
+#include <TopTools_DataMapOfShapeShape.hxx>
+#include <BRepTools_ReShape.hxx>
+
 class TopoDS_Shape;
 
 
@@ -66,6 +69,17 @@ public:
   Standard_EXPORT void Perform (const TopoDS_Shape& S, const Standard_Boolean Copy = Standard_False);
 
 
+  //! Returns the list  of shapes modified from the shape
+  //! <S>.
+  Standard_EXPORT virtual const TopTools_ListOfShape& Modified (const TopoDS_Shape& S);
+  
+  //! Returns the modified shape corresponding to <S>.
+  //! S can correspond to the entire initial shape or to its subshape.
+  //! Exceptions
+  //! Standard_NoSuchObject if S is not the initial shape or
+  //! a subshape of the initial shape to which the
+  //! transformation has been applied. 
+  Standard_EXPORT virtual TopoDS_Shape ModifiedShape (const TopoDS_Shape& S) const;
 
 
 protected:
@@ -76,9 +90,10 @@ protected:
 
 private:
 
+  Standard_EXPORT void CorrectVertexTol();
 
-
-
+  TopTools_DataMapOfShapeShape myVtxToReplace;
+  BRepTools_ReShape mySubs;
 
 };
 
